# KDSingleApplication

./: .codespellrc  .gitignore  .gitreview  .krazy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Changelog  INSTALL.txt  KDSingleApplication.pri  KDSingleApplication.pro  LICENSE.txt  README.md  REUSE.toml  appveyor.yml  common.pri
.github/: dependabot.yml
.github/workflows/: build-sanitizers.yml  build.yml  create_release.yml  documentation.yml  nightly.yml
.reuse/: dep5
distro/: debian.changelog  qt5-debian.control  qt5-debian.rules  qt5-kdsingleapplication.dsc  qt5-kdsingleapplication.spec  qt6-debian.control  qt6-debian.rules  qt6-kdsingleapplication.dsc  qt6-kdsingleapplication.spec
docs/: CMakeLists.txt  KDSingleApplication-CopyrightAssignmentForm.docx
docs/api/: CMakeLists.txt  Doxyfile.cmake  footer.html
examples/: CMakeLists.txt  examples.pri  examples.pro
examples/widgetsingleapplication/: CMakeLists.txt  main.cpp  primaryinstancewidget.cpp  primaryinstancewidget.h  secondaryinstancewidget.cpp  secondaryinstancewidget.h  widgetsingleapplication.pro
src/: CMakeLists.txt  KDSingleApplicationConfig.cmake.in  kdsingleapplication.cpp  kdsingleapplication.h  kdsingleapplication_lib.h  kdsingleapplication_localsocket.cpp  kdsingleapplication_localsocket_p.h
tests/: CMakeLists.txt  tests.pri  tests.pro
tests/auto/: CMakeLists.txt  auto.pri  auto.pro
tests/auto/kdsingleapplication/: kdsingleapplication.pro  tst_kdsingleapplication.cpp
tests/auto/kdsingleapplication/simpletest/: main.cpp
tests/auto/kdsingleapplication/stresstest/: main.cpp
tests/auto/kdsingleapplication/stresstest2/: main.cpp
tests/auto/kdsingleapplication/test/: test.pro
tests/auto/namelengthtest/: CMakeLists.txt  tst_namelengthtest.cpp
tests/auto/namelengthtest/namelengthtest/: CMakeLists.txt  main.cpp
tests/auto/namelengthtest/test/: CMakeLists.txt
tests/auto/simpletest/: CMakeLists.txt  simpletest.pro  tst_simpletest.cpp
tests/auto/simpletest/simpletest/: CMakeLists.txt  main.cpp
tests/auto/simpletest/test/: CMakeLists.txt  test.pro
tests/auto/stresstest/: CMakeLists.txt  stresstest.pro  tst_stresstest.cpp
tests/auto/stresstest/stresstest/: CMakeLists.txt  main.cpp
tests/auto/stresstest/stresstest2/: CMakeLists.txt  main.cpp  stresstest2.pro
tests/auto/stresstest/test/: CMakeLists.txt  test.pro
tests/manual/: CMakeLists.txt  manual.pri  manual.pro
tests/manual/simplesingleapp/: CMakeLists.txt  main.cpp  simplesingleapp.pro
